change garbage collection settings for jetty
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3671 e0eb17dc-060e-4555-9e78-273a5d168c06